# yapx

./: .bumpversion.cfg  .copier-answers.yml  .dockerignore  .drone.yml  .env  .gitignore  .pre-commit-config.yaml  .python-version  CHANGELOG.md  Dockerfile  Dockerfile-docs  LICENSE  Mykefile  README.md  README.pypi.md  VERSION  devbox.json  docker-compose.yml  images.list  images.txt  pyproject.toml  ruff.toml  setup.cfg
.github/: FUNDING.yml
config/: mkdocs.yml
docs/: changelog.md  index.md
docs/css/: extra.css
docs/page/: arguments.md  completion.md  examples.ipynb  overview.ipynb  related.md  sequences.ipynb  tui.md  types.md
docs/pages/: 100_commands.md  200_types.md  300_arg_options.md  400_extra_args.md  800_tui.md  900_similar_projects.md
docs/reference/: 01.md  02.md  03.md  05.md  yapx.md
src/yapx/: __init__.py  __main__.py  __version__.py  actions.py  arg.py  argparse_action.py  argument_parser.py  command.py  context.py  exceptions.py  namespace.py  types.py  utils.py
tasks/: hostbutter.py  python-package.py
tests/: conftest.py  test_actions.py  test_add_arguments.py  test_add_arguments_future.py  test_add_command.py  test_arg.py  test_main.py  test_run.py  test_utils.py
tests/resources/: cli.json  cli.yml
