[metadata]
name = yapx
version = file: VERSION
long_description = file: README.md
long_description_content_type = text/markdown
author = donald
author_email = hello@fresh2.dev
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
url = https://codeberg.org/Fresh2dev/yapx
project_urls =
    Repository = https://codeberg.org/Fresh2dev/yapx
    Issues = https://codeberg.org/Fresh2dev/yapx/issues
    Documentation = https://www.Fresh2.dev/code/r/yapx/i/docs
    Changelog = https://www.Fresh2.dev/code/r/yapx/i/docs/changelog
    Funding = https://www.Fresh2.dev/tip
[options]
package_dir =
    =src
packages = find:
python_requires = >=3.7
install_requires =
    typing-extensions; python_version<'3.10'

[options.package_data]
* = *

[options.extras_require]
build =
    build
    setuptools
    twine
    wheel
    myke[io]==0.0.1a6
docs =
    mkdocs==1.*
    mkdocstrings[python]==0.19.0
    mkdocs-autorefs
dev =
    black
    flake8
    flake8-bugbear
    flake8-comprehensions
    flake8-pytest-style
    flake8-simplify
    # https://github.com/python/importlib_metadata/issues/406#issuecomment-1264666048
    importlib-metadata < 5.0
    autoflake
    pyupgrade
    isort
    mypy[reports]
    pydantic==1.*,>=1.10.2
    pylint
    pylint-pytest
    rope
    tox
    myke[io]==0.0.1a6
tests =
    pytest==7.*
    pytest-cov
    pytest-html
    pytest-sugar
    hypothesis==6.*
    packaging
    pydantic==1.*,>=1.10.2
pydantic =
    pydantic==1.*,>=1.10.2

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
console_scripts =
    yapx = yapx.__main__:main

[tool:pytest]
minversion = 7.0
testpaths =
    tests

[mypy]
namespace_packages = True
explicit_package_bases = True
strict = True
plugins = pydantic.mypy
files = src/**/*.py
exclude = tests
[mypy-tests.*]
ignore_errors = True

[pydantic-mypy]
init_forbid_extra = True
init_typed = True
warn_required_dynamic_aliases = True
warn_untyped_fields = True

[isort]
profile = black
line_length = 88
src_paths = src,tests
float_to_top = true
include_trailing_comma = true
honor_noqa = true

[pylint.MASTER]
load-plugins = pylint_pytest
ignore-paths = ^\.git$,
               ^\.venv$,
               ^__pycache__$
[pylint.FORMAT]
max-line-length = 88
[pylint]
disable =
    invalid-name,
    unnecessary-pass,
    unnecessary-ellipsis

[flake8]
max-line-length = 88
ignore = PT004, W503, F401
extend-ignore = E203
exclude = .git,.venv,__pycache__
require-plugins =
    flake8-bugbear
    flake8-comprehensions
    flake8-pytest-style
    flake8-simplify

[autoflake]
in-place = true
remove-all-unused-imports = true
recursive = true
ignore-init-module-imports = true
remove-duplicated-keys = true
removed-unused-variables = true
jobs = 1

[tox:tox]
envlist = py3{7,8,9,10,11}
toxworkdir = /tmp/.tox
[testenv]
recreate = true
extras = tests
commands =
    python -m pytest {posargs}
