[metadata]
name = yapx
version = file: VERSION
description = WIP
long_description = file: README.md
long_description_content_type = text/markdown
author = donald
author_email = hello@Fresh2.dev
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
url = https://codeberg.org/Fresh2dev/yapx
project_urls =
    Repository = https://codeberg.org/Fresh2dev/yapx
    License = https://www.Fresh2.dev/code/r/yapx/i/license
    Documentation = https://www.Fresh2.dev/code/r/yapx/i
    Issues = https://codeberg.org/Fresh2dev/yapx/issues
    Changelog = https://www.Fresh2.dev/code/r/yapx/i/changelog
    Funding = https://www.Fresh2.dev/tip
[options]
package_dir =
    =src
packages = find:
python_requires = >=3.7
install_requires =
    typing-extensions; python_version<'3.10'

[options.package_data]
* = **

[options.extras_require]
build =
    setuptools>=62.3.0
    build==0.*
    wheel==0.*
    twine==4.*
docs =
    mkdocs==1.*
    mkdocstrings[python]==0.19.*
    mkdocs-autorefs==0.*
dev =
    black==22.*
    flake8==5.*
    flake8-bugbear==23.*
    flake8-comprehensions==3.*
    flake8-pytest-style==1.*
    flake8-simplify==0.*
    # https://github.com/python/importlib_metadata/issues/406#issuecomment-1264666048
    importlib-metadata<5.0
    autoflake==1.*
    pyupgrade==3.*
    isort==5.*
    mypy[reports]==0.*
    pylint==2.*
    pylint-pytest==1.*
    rope==1.*
tests =
    pytest==7.*
    pytest-cov==4.*
    pytest-html==3.*
    pytest-sugar==0.*
    pylint==2.*
    pylint-pytest==1.*
    packaging==23.*
    mocx==0.0.1a1
    pydantic>=1.10.3,<2
    shtab==1.*
pydantic =
    pydantic>=1.10.3,<2
shtab =
    shtab==1.5.8
extras =
    pydantic>=1.10.3,<2
    shtab==1.5.8

[options.packages.find]
where = src
exclude =
    tests

[tool:pytest]
minversion = 7.0
testpaths =
    tests

[mypy]
namespace_packages = True
explicit_package_bases = True
strict = True
plugins = pydantic.mypy
files = src/**/*.py
exclude = tests
[mypy-tests.*]
ignore_errors = True

[pydantic-mypy]
init_forbid_extra = True
init_typed = True
warn_required_dynamic_aliases = True
warn_untyped_fields = True

[isort]
profile = black
line_length = 88
src_paths = src,tests
float_to_top = true
include_trailing_comma = true
honor_noqa = true

[pylint.MASTER]
load-plugins = pylint_pytest
ignore-paths = ^\.git$,
               ^\.venv$,
               ^__pycache__$
[pylint.FORMAT]
max-line-length = 88
[pylint]
disable =
    invalid-name,
    unnecessary-pass,
    unnecessary-ellipsis,
    import-outside-toplevel

[flake8]
max-line-length = 88
ignore = PT004, W503, F401
extend-ignore = E203, E501
extend-immutable-calls = yapx.arg, myke.arg
exclude = .git,.venv,__pycache__
require-plugins =
    flake8-bugbear
    flake8-comprehensions
    flake8-pytest-style
    flake8-simplify

[autoflake]
in-place = true
remove-all-unused-imports = true
recursive = true
ignore-init-module-imports = true
remove-duplicated-keys = true
removed-unused-variables = true
jobs = 1

[tox:tox]
envlist = py3{7,8,9,10,11}
skip_missing_interpreters = false
toxworkdir = /tmp/.tox
minversion = 4.0
requires =
    setuptools>=62.3.0
[testenv]
recreate = true
extras = tests
commands =
    python -m pytest {posargs}
    python -m pylint --disable=C,R,fixme ./src ./tests
