[metadata]
name = yapx
version = file: VERSION
description = WIP
long_description = file: README.md
long_description_content_type = text/markdown
author = Donald Mellenbruch
author_email = hello@Fresh2.dev
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
url = https://www.github.com/fresh2dev/yapx
project_urls =
    Homepage = https://www.Fresh2.dev/code/r/yapx/i
    Repository = https://www.github.com/fresh2dev/yapx
    Funding = https://www.Fresh2.dev/funding

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.7
install_requires =
    typing-extensions; python_version<'3.10'

[options.package_data]
* = **

[options.extras_require]
build =
    setuptools>=62.3.0
    build==0.*
    wheel==0.*
    twine==4.*
docs =
    mkdocs==1.*
    mkdocs-material==9.*
    mkdocstrings[python]==0.20.*
    mkdocs-autorefs==0.*
    mkdocs-include-dir-to-nav==1.*
dev =
    python-lsp-server[rope]==1.*
    pylint==2.*
    pylint-pytest==1.*
    mypy[reports]==0.*
    ruff==0.*
    black==23.*
    isort==5.*
    bump2version==1.*
    ipython
    pdbpp
tests =
    pytest==7.*
    pytest-cov==4.*
    pytest-html==3.*
    pytest-sugar==0.*
    pytest-custom-exit-code==0.3.*
    pylint==2.*
    pylint-pytest==1.*
    packaging==23.*
    mockish==0.1.*
    pydantic>=1.10.3,<2
    shtab==1.5.8
pydantic =
    pydantic>=1.10.3,<2
shtab =
    shtab==1.5.8
extras =
    pydantic>=1.10.3,<2
    shtab==1.5.8

[options.packages.find]
where = src
exclude =
    tests

[tool:pytest]
minversion = 7.0
testpaths =
    tests

[mypy]
namespace_packages = True
explicit_package_bases = True
strict = True
plugins = pydantic.mypy
files = src/**/*.py
exclude = tests

[mypy-tests.*]
ignore_errors = True

[pydantic-mypy]
init_forbid_extra = True
init_typed = True
warn_required_dynamic_aliases = True
warn_untyped_fields = True

[isort]
profile = black
line_length = 88
src_paths = src,tests
float_to_top = true
include_trailing_comma = true
honor_noqa = true

[pylint.MASTER]
load-plugins = pylint_pytest
ignore-paths = ^\.git$,
    ^\.venv$,
    ^__pycache__$

[pylint.FORMAT]
max-line-length = 88

[pylint]
disable =
    fixme,
    invalid-name,
    unnecessary-pass,
    unnecessary-ellipsis,
    too-few-public-methods,
    import-outside-toplevel,
    missing-module-docstring

[tox:tox]
envlist = py3{7,8,9,10,11}
skip_missing_interpreters = false
toxworkdir = /tmp/.tox
minversion = 4.0
requires =
    setuptools>=62.3.0

[testenv]
recreate = true
extras = tests
commands =
    python -m pytest {posargs}
    python -m pylint --disable=C,R ./src ./tests
